--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <!-- ICONS -->
+    <script src="https://kit.fontawesome.com/6f3103b13c.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="style.css">
     
     <title>Pomodoro Clock</title>
@@ -15,7 +24,7 @@
 
             <!-- Tags -->
             <div class="panel">
-                <p class="active" id="study">Study</p>
+                <p id="study">Study</p>
                 <P id="rest">Rest</P>
             </div>
 
@@ -32,7 +41,7 @@
 
             <!-- timer controller -->
             <div class="control">
-                <button id="start" onclick="start"><i class="fa-solid fa-play">Start</i></button>
+                <button id="start" onclick="start()"><i class="fa-solid fa-play">Start</i></button>
 
                 <a id="reset" href="/"><i class="fa-solid fa-arrow-rotate-left">Pause</i></a>
             </div>
