--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <section>
         <div class="container">
-            <h1>Pomodoro</h1>
+            <h1>Pomodoro Timer</h1>
 
             <!-- Tags -->
             <div class="panel">
